...
                    android:layout_margin="@dimen/linearlayout_activity_defaults_accesstype_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_activity_defaults_accesstype_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_activity_defaults_accesstype" />

                    <GridLayout
                        android:id="@+id/radiogroup_activity_defaults_accesstype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:columnCount="2" />

                </LinearLayout>

...
                    android:layout_margin="@dimen/linearlayout_activity_defaults_address_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_activity_defaults_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_activity_defaults_address" />

                    <TextView
                        android:id="@+id/textview_activity_defaults_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:text="" />

                </LinearLayout>
...
                    android:layout_margin="@dimen/linearlayout_activity_defaults_port_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_activity_defaults_port_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_activity_defaults_port" />

                    <TextView
                        android:id="@+id/textview_activity_defaults_port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:text="" />

                </LinearLayout>
...
                    android:layout_margin="@dimen/linearlayout_interval_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_activity_defaults_interval_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_activity_defaults_interval" />

                    <LinearLayout
...
                        android:layout_margin="@dimen/linearlayout_interval_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_activity_defaults_interval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:text="" />

                        <TextView
                            android:id="@+id/textview_activity_defaults_interval_minutes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/textview_activity_defaults_interval_minutes_margin"
                            android:textStyle="normal"
                            android:text="" />

...
                    android:layout_margin="@dimen/linearlayout_activity_defaults_notification_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_activity_defaults_notification_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_activity_defaults_notification" />

                    <LinearLayout
...
                        android:layout_margin="@dimen/linearlayout_activity_defaults_notification_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_defaults_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:trackTint="@drawable/switchtrack_selector"
                            app:thumbTint="@drawable/switchthumb_selector"
                            android:showText="false" />

                        <TextView
                            android:id="@+id/textview_activity_defaults_notification_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="" />

                    </LinearLayout>
...
