...
    <string name="string_started">Started</string>
    <string name="string_stopped">Stopped</string>
    <string name="string_start">Start</string>
    <string name="string_end">End</string>
    <string name="string_suspended">Suspended</string>
    <plurals name="string_minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="string_second">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>
    <string name="string_successful">successful</string>
    <string name="string_not_successful">failed</string>
    <string name="string_not_executed">not executed</string>
    <string name="string_yes">yes</string>
    <string name="string_no">no</string>
    <string name="string_none">none</string>
    <string name="string_not_set">not set</string>
    <string name="string_open">Open</string>
    <string name="string_sec">sec</string>
    <string name="string_msec">msec</string>
    <string name="string_active">Active</string>
...
