...
    <string name="basic_auth_username_field_name">Basic auth username</string>
    <string name="basic_auth_password_field_name">Basic auth password</string>
    <string name="username_field_name">Username</string>
    <string name="password_field_name">Password</string>
    <string name="password_confirm_field_name">Confirm password</string>
    <string name="invalid_no_match">Values do not match</string>
    <string name="invalid_no_value">No value specified</string>
    <string name="invalid_number_format">Invalid format</string>
    <string name="invalid_host_format">No valid host or IP address</string>
    <string name="invalid_url_format">No valid URL</string>
    <string name="invalid_file_name">No valid filename</string>
    <string name="invalid_folder_name">No valid folder path</string>
    <string name="invalid_characters">Value contains invalid characters</string>
    <string name="invalid_exists">Value already exists</string>
    <string name="invalid_must_exist">At least one value must be specified</string>
    <string name="invalid_range_minimum">Minimum: %d</string>
...
